# PartielPython

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
musics/: __main__.py  api.py  cli.py  db.py
tests/: test_api.py  test_cli.py  test_db.py  test_main.py
